update url fe